[package]
name = "orchestrator"
version = "0.2.2"
authors = ["stefanos.kouroupis <stefanos.kouroupis@cloudcall.com>"]
edition = "2018"
description = "Orchestration sequences"
license = "MIT"
keywords = ["orchestration", "pipeline", "sequences"]
documentation = "https://docs.rs/orchestrator"
repository = "https://github.com/elasticrash/orchestrator.git"
readme = "README.md"

[lib]
name = "orchestrator"
path = "./src/lib.rs"

[dependencies]

